[package]
name = "rust_dbscan"
version = "0.1.2"
edition = "2024"
authors = ["Sergey Kovalev"]
description = "DBSCAN geo point clustering tool - Rust port"
license = "MIT"
rust-version = "1.91"

[dependencies]
csv = "1.3"
bitvec = "1.0"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
quickcheck = "1.0"

